Create mini-templating system to send none-critical information to static index

--- a/examples/getstarted/public/index.html
+++ b/examples/getstarted/public/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
-
+{% strapi.config.info.version %}
+{% strapi.config.info.name %}
+{% strapi.config.admin.url %}
 <html>
   <head>
     <meta charset="utf-8" />
