Use Lodash template system instead of custom one

--- a/examples/getstarted/public/index.html
+++ b/examples/getstarted/public/index.html
@@ -17,20 +17,20 @@
       <h1><img class="logo" src="https://strapi.io/assets/images/logo_login.png" /></h1>
       <div class="informations">
         <div>
-          <span class="environment">{% strapi.config.environment %}</span>
+          <span class="environment"><%= strapi.config.environment %></span>
           <p>
-            The server is running successfully (<strong>v{% strapi.config.info.version %})</strong>
+            The server is running successfully (<strong>v<%= strapi.config.info.version %>)</strong>
           </p>
         </div>
         <div class="text-align-right">
-          <p>{% server.time %}</p>
-          <a class="cta cta-primary" href="{% strapi.config.admin.url %}" title="Click to open the administration" ><i class="fas fa-external-link-alt"></i>Open the administration</a>
+          <p><%= serverTime %></p>
+          <a class="cta cta-primary" href="<%= strapi.config.admin.url %>" target="_blank" title="Click to open the administration" ><i class="fas fa-external-link-alt"></i>Open the administration</a>
         </div>
       </div>
       <div class="lets-started">
         <h2>Let's get started!</h2>
         <p>To discover the power provided by Strapi, you need to create an administrator.</p>
-        <a class="cta cta-secondary" href="{% strapi.config.admin.url %}" title="Click to create the first administration" ><i class="fas fa-external-link-alt"></i>Create the first administrator</a>
+        <a class="cta cta-secondary" href="<%= strapi.config.admin.url %>" target="_blank" title="Click to create the first administration" ><i class="fas fa-external-link-alt"></i>Create the first administrator</a>
         <div class="people-saying-hello">
           <img class="visible" src="https://strapi.io/assets/images/group_people_1.png" alt="People saying hello" />
           <img src="https://strapi.io/assets/images/group_people_2.png" alt="People saying hello" />
@@ -39,7 +39,7 @@
       </div>
     </section>
     <script>
-      if({%isInitialised%}){document.querySelector('.lets-started').remove()}else{document.querySelector('.informations').remove()}
+      if(<%= isInitialised %>){document.querySelector('.lets-started').remove()}else{document.querySelector('.informations').remove()}
       var images=document.querySelectorAll('.people-saying-hello img');var nextIndex=0;setInterval(function(){var currentIndex=0;images.forEach(function(image,index){if(image.className==='visible'){currentIndex=index}});nextIndex=currentIndex+1;if(nextIndex===images.length){nextIndex=0}
       images.forEach(function(image){image.classList.remove('visible')})
       images[nextIndex].classList.add('visible')},1500)
